# modded-nanogpt

./: .gitignore  pyproject.toml
jepa/: ablations.sh  bench.py  compare_features.py  compare_runs.py  data.py  ema.py  eval.py  eval_probe.py  gpt.py  loss.py  model.py  test_smoke.py  train_jepa.py  train_lm.py  visualize.py
jepa/configs/: __init__.py  baseline.py  ema.py  lag4.py  large.py  lm_large.py  nope.py
jepa/figs/: semantic_attn.txt
jepa/figs/500M/: semantic_attn.txt
jepa/figs/ema/: semantic_attn.txt
jepa/figs/large/: semantic_attn.txt
