[project]
name = "modded-nanogpt"
version = "0.1.0"
description = "Modded nanoGPT speedrun + JEPA research fork"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "torch==2.10",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "typing-extensions==4.15.0",
    "datasets",
    "tiktoken",
    "wandb",
    "matplotlib",
]

[tool.uv]
package = false

[tool.uv.sources]
# torch 2.10 lives on the PyTorch CUDA index until released to pypi
